# rt

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  crates-io.yml  prepare-release.yml  release.yml
assets/: demo.tape  justfile
scripts/: release.sh
src/: cli.rs  detect.rs  error.rs  exec.rs  history.rs  main.rs  parser.rs  task_args.rs  tasks.rs
src/parser/: cargo_make.rs  justfile.rs  makefile.rs  mask.rs  mise.rs  taskfile.rs  vite_plus.rs  vite_task.rs
tests/just/: justfile
tests/make/: Makefile
tests/mask/: maskfile.md
tests/mise/: mise.toml
tests/taskfile/: Taskfile.yaml
