[package]
name = "rt-cli"
version = "0.1.1"
edition = "2024"
description = "rt is a CLI tools for running task files correctly."
repository = "https://github.com/unvalley/rt"
license = "MIT"
homepage = "https://github.com/unvalley/rt"
documentation = "https://github.com/unvalley/rt/README.md"
exclude = ["/.github", ".gitignore"]

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
bpaf = { version = "0.9.20", features = ["derive", "dull-color"] }
thiserror = "2.0.17"
which = "8.0.0"
inquire = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.24.0"
