[package]
name = "rt-cli"
version = "0.1.9"
edition = "2024"
description = "rt is a CLI tools for running task files correctly."
repository = "https://github.com/unvalley/rt"
license = "MIT"
homepage = "https://github.com/unvalley/rt"
documentation = "https://github.com/unvalley/rt/README.md"
exclude = ["/.github", ".gitignore"]

[[bin]]
name = "rt"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }.{ archive-format }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[dependencies]
bpaf = { version = "0.9.24", features = ["derive", "dull-color"] }
thiserror = "2.0.18"
which = "8.0.2"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
fs2 = "0.4.3"
time = { version = "0.3.47", features = ["formatting", "local-offset", "parsing"] }
terminal_size = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
